# vigilance

./: .gitignore  .gitmodules  .travis.yml  BRAINSTORM.md  Guardfile  LICENSE  README.md  Rakefile  TODO.md  cabal.sandbox.config  stack.yaml  vigilance.cabal
src/Utils/Vigilance/: Config.hs  Logger.hs  Main.hs  Notifier.hs  Notifiers.hs  StateMachine.hs  Sweeper.hs  TableOps.hs  Types.hs  Utils.hs  Worker.hs
src/Utils/Vigilance/Client/: Client.hs  Config.hs  Main.hs
src/Utils/Vigilance/Notifiers/: Email.hs  HTTP.hs  Log.hs
src/Utils/Vigilance/Web/: Handlers.hs  Yesod.hs
src/Utils/Vigilance/Workers/: LoggerWorker.hs  NotificationRetryWorker.hs  NotificationWorker.hs  StaticWatchWorker.hs  SweeperWorker.hs
test/: SpecHelper.hs
test/Utils/Vigilance/: ConfigSpec.hs  StateMachineSpec.hs  SweeperSpec.hs  TableOpsSpec.hs  TypesSpec.hs  UtilsSpec.hs
test/Utils/Vigilance/Client/: ClientSpec.hs
test/Utils/Vigilance/Notifiers/: EmailSpec.hs  HTTPSpec.hs
test/Utils/Vigilance/Workers/: NotificationRetryWorkerSpec.hs
test/fixtures/: config_with_watch_imports.conf  config_with_watches.conf  empty_config.conf  full_config.conf  only_watches.conf  partial_config.conf
