name:                vigilance
version:             0.0.0.0
synopsis:            An extensible dead-man's switch system
-- description:         
license:             MIT
license-file:        LICENSE
author:              Michael Xavier
maintainer:          michael@michaelxavier.net
copyright:           (c) 2013 Michael Xavier
category:            Utils
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10
Homepage:           http://github.com/michaelxavier/vigilance
Bug-Reports:        http://github.com/michaelxavier/vigilance/issues

executable vigilance-server
  hs-source-dirs:     src
  main-is: Utils/Vigilance/Main.hs
  build-depends:       base >=4.6 && <4.7,
                       async == 2.*,
                       aeson >=0.6 && <1.0,
                       attoparsec,
                       bytestring,
                       acid-state,
                       classy-prelude >=0.5.8 && <1.0,
                       configurator >=0.2 && <1.0,
                       containers,
                       data-store >= 0.3.0.2 && <1.0,
                       either == 3.4.1,
                       entropy >= 0.2.2.2,
                       errors >= 1.4.2 && <2.0,
                       fast-logger >= 0.3.2 && < 1.0,
                       http-types,
                       interpolatedstring-perl6 >=0.9.0 && <1.0,
                       lens >=3.9 && < 4.0,
                       mime-mail >= 0.4.2 && <1.0,
                       mtl,
                       safecopy,
                       stm >=2.4.2 && <3.0,
                       time,
                       text,
                       transformers,
                       unix >=2.6.0.1 && <3.0,
                       unordered-containers,
                       vector,
                       warp,
                       yesod,
                       yesod-core,
                       yesod-platform >= 1.2.3 && < 2.0
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options: -threaded -O3 -rtsopts -Wall -Werror

executable vigilance
  hs-source-dirs:     src
  main-is: Utils/Vigilance/Client/Main.hs
  build-depends:       base >=4.6 && <4.7,
                       async == 2.*,
                       aeson >=0.6 && <1.0,
                       attoparsec,
                       blaze-builder,
                       bytestring,
                       acid-state,
                       classy-prelude >=0.5.8 && <1.0,
                       configurator >=0.2 && <1.0,
                       containers,
                       data-store >= 0.3.0.2 && <1.0,
                       either == 3.4.1,
                       entropy >= 0.2.2.2,
                       errors >= 1.4.2 && <2.0,
                       fast-logger >= 0.3.2 && < 1.0,
                       http-streams >= 0.6.0.2 && <= 1.0,
                       http-types,
                       io-streams,
                       interpolatedstring-perl6 >=0.9.0 && <1.0,
                       lens >=3.9 && < 4.0,
                       mime-mail >= 0.4.2 && <1.0,
                       mtl,
                       optparse-applicative >= 0.5.2.1 && < 1.0,
                       safecopy,
                       stm >=2.4.2 && <3.0,
                       time,
                       text,
                       transformers,
                       unix >=2.6.0.1 && <3.0,
                       unordered-containers,
                       vector,
                       warp,
                       yesod,
                       yesod-core,
                       yesod-platform >= 1.2.3 && < 2.0
  default-language:    Haskell2010
  ghc-options: -threaded -O3 -rtsopts

Test-Suite test-vigilance
  default-language:    Haskell2010
  Type: exitcode-stdio-1.0
  hs-source-dirs:     src,test
  Main-Is: Spec.hs
  ghc-options: -threaded -O3 -rtsopts
  build-depends:       base   >=4.6 && <4.7,
                       async == 2.*,
                       aeson >=0.6 && <1.0,
                       attoparsec,
                       blaze-builder,
                       bytestring,
                       acid-state,
                       classy-prelude >=0.5.8 && <1.0,
                       configurator >=0.2 && <1.0,
                       containers,
                       data-store >= 0.3.0.2 && <1.0,
                       entropy >= 0.2.2.2,
                       errors >= 1.4.2 && <2.0,
                       fast-logger >= 0.3.2 && < 1.0,
                       http-streams >= 0.6.0.2 && <= 1.0,
                       http-types,
                       hspec  >= 1.6 && < 2.0,
                       hspec-expectations,
                       HUnit,
                       interpolatedstring-perl6 >=0.9.0 && <1.0,
                       io-streams,
                       QuickCheck,
                       quickcheck-properties,
                       lens >=3.9 && < 4.0,
                       derive >=2.5.11 && < 3.0,
                       mime-mail >= 0.4.2 && <1.0,
                       mtl,
                       safecopy,
                       stm >=2.4.2 && <3.0,
                       time,
                       text,
                       transformers,
                       unix >=2.6.0.1 && <3.0,
                       unordered-containers,
                       vector,
                       warp,
                       yesod,
                       yesod-core,
                       yesod-platform >= 1.2.3 && < 2.0
