Name:                vigilance
Version:             0.1.0.0
Synopsis:            An extensible dead-man's switch system
Description:         Vigilance is a dead man's switch (See <https://en.wikipedia.org/wiki/Dead_man%27s_switch>)
                     (or vigilance switch). You define named @watches that you expect to happen
                     and how long to wait inbetween before it's time to worry. You then instrument
                     your periodical tasks, whatever they are, to report to vigilance via a simple
                     HTTP POST or with the included client. You can then
                     configure notifications that will fire when a watch fails
                     to check in.

                     View the README on the homepage for more details.

                     Install notes:

                     On client installs where you may not want to install the
                     server component, configure like:
                     .
                     > cabal configure -fno-server
                     .

                     On client installs where you may not want to install the
                     client component, configure like:
                     .
                     > cabal configure -fno-client
                     .

License:             MIT
License-File:        LICENSE
Author:              Michael Xavier
Maintainer:          michael@michaelxavier.net
Copyright:           (c) 2013 Michael Xavier
Category:            Utils
Build-Type:          Simple
Cabal-Version:       >=1.10
Homepage:            http://github.com/michaelxavier/vigilance
Bug-Reports:         http://github.com/michaelxavier/vigilance/issues
Extra-Source-Files:  README.md
                     TODO.md

Flag no-server
  Description: Omit the server component. Installs on client machines can and should pass this.
  Default:     False

Flag no-client
  Description: Omit the client component. Install on the server may pass this if desired.
  Default:     False

Executable vigilance-server
  Hs-Source-Dirs:     src
  Main-Is: Utils/Vigilance/Main.hs
  if flag(no-server)
    Buildable: False
  else
    Build-Depends:      base >=4.5 && <4.7,
                        async == 2.*,
                        aeson >=0.6 && <1.0,
                        attoparsec,
                        blaze-builder,
                        bytestring,
                        acid-state,
                        classy-prelude >=0.5.8 && <1.0,
                        configurator >=0.2 && <1.0,
                        containers,
                        data-store >= 0.3.0.7 && <1.0,
                        directory,
                        either == 3.4.1,
                        entropy >= 0.2.2.2,
                        errors >= 1.4.2 && <2.0,
                        fast-logger >= 0.3.2 && < 1.0,
                        http-streams >= 0.6.1.1 && <= 1.0,
                        http-types,
                        io-streams,
                        interpolatedstring-perl6 >=0.9.0 && <1.0,
                        lens >=3.9 && < 4.0,
                        mime-mail >= 0.4.2 && <1.0,
                        monad-loops >= 0.4.2 && <1.0,
                        monad-logger,
                        mtl,
                        safecopy,
                        stm >=2.4.2 && <3.0,
                        time,
                        template-haskell,
                        text,
                        transformers,
                        unix >=2.6.0.1 && <3.0,
                        unordered-containers,
                        vector,
                        wai,
                        wai-extra,
                        warp,
                        yesod,
                        yesod-core,
                        yesod-platform >= 1.2.3 && < 2.0
    Default-Language:    Haskell2010
    Ghc-Options: -threaded -O3 -rtsopts -Wall -Werror
    Other-Modules: Utils.Vigilance.Config
                   Utils.Vigilance.Logger
                   Utils.Vigilance.TableOps
                   Utils.Vigilance.Types
                   Utils.Vigilance.Utils
                   Utils.Vigilance.Worker
                   Utils.Vigilance.Web.Yesod
                   Utils.Vigilance.Workers.LoggerWorker
                   Utils.Vigilance.Workers.NotificationWorker
                   Utils.Vigilance.Workers.NotificationRetryWorker
                   Utils.Vigilance.Workers.StaticWatchWorker
                   Utils.Vigilance.Workers.SweeperWorker
                   Utils.Vigilance.Sweeper
                   Utils.Vigilance.Notifiers.HTTP
                   Utils.Vigilance.Notifiers.Email
                   Utils.Vigilance.Notifiers.Log

Executable vigilance
  Hs-Source-Dirs:     src
  Main-Is: Utils/Vigilance/Client/Main.hs
  if flag(no-client)
    Buildable: False
  else
    Build-Depends:      base >=4.5 && <4.7,
                        async == 2.*,
                        aeson >=0.6 && <1.0,
                        attoparsec,
                        blaze-builder,
                        bytestring,
                        acid-state,
                        classy-prelude >=0.5.8 && <1.0,
                        configurator >=0.2 && <1.0,
                        containers,
                        data-store >= 0.3.0.7 && <1.0,
                        directory,
                        either == 3.4.1,
                        entropy >= 0.2.2.2,
                        errors >= 1.4.2 && <2.0,
                        fast-logger >= 0.3.2 && < 1.0,
                        http-streams >= 0.6.1.1 && <= 1.0,
                        http-types,
                        io-streams,
                        interpolatedstring-perl6 >=0.9.0 && <1.0,
                        lens >=3.9 && < 4.0,
                        mime-mail >= 0.4.2 && <1.0,
                        monad-loops >= 0.4.2 && <1.0,
                        mtl,
                        optparse-applicative >= 0.5.2.1 && < 1.0,
                        safecopy,
                        stm >=2.4.2 && <3.0,
                        time,
                        text,
                        transformers,
                        unix >=2.6.0.1 && <3.0,
                        unordered-containers,
                        vector,
                        warp,
                        yesod,
                        yesod-core,
                        yesod-platform >= 1.2.3 && < 2.0
    Default-Language:    Haskell2010
    Ghc-Options: -threaded -O3 -rtsopts -Wall -Werror
    Other-Modules: Utils.Vigilance.Client.Client
                   Utils.Vigilance.Client.Config
                   Utils.Vigilance.Types

Test-Suite test-vigilance
  default-language:    Haskell2010
  Type: exitcode-stdio-1.0
  hs-source-dirs:     src,test
  Main-Is: Spec.hs
  ghc-options: -threaded -O3 -rtsopts
  build-depends:       base   >=4.5 && <4.7,
                       async == 2.*,
                       aeson >=0.6 && <1.0,
                       attoparsec,
                       blaze-builder,
                       bytestring,
                       acid-state,
                       classy-prelude >=0.5.8 && <1.0,
                       configurator >=0.2 && <1.0,
                       containers,
                       data-store >= 0.3.0.7 && <1.0,
                       directory,
                       entropy >= 0.2.2.2,
                       errors >= 1.4.2 && <2.0,
                       fast-logger >= 0.3.2 && < 1.0,
                       http-streams >= 0.6.0.2 && <= 1.0,
                       http-types,
                       hspec  >= 1.6 && < 2.0,
                       hspec-expectations,
                       HUnit>=1.2.5,
                       interpolatedstring-perl6 >=0.9.0 && <1.0,
                       io-streams,
                       QuickCheck>=1.2.5,
                       quickcheck-properties,
                       lens >=3.9 && < 4.0,
                       derive >=2.5.11 && < 3.0,
                       mime-mail >= 0.4.2 && <1.0,
                       monad-loops >= 0.4.2 && <1.0,
                       mtl,
                       safecopy,
                       stm >=2.4.2 && <3.0,
                       time,
                       text,
                       transformers,
                       unix >=2.6.0.1 && <3.0,
                       unordered-containers,
                       vector,
                       warp,
                       yesod,
                       yesod-core,
                       yesod-platform >= 1.2.3 && < 2.0
